# HypothesisLoop

./: .dockerignore  .gitattributes  .gitignore  .vm-startup.sh  Dockerfile  README.md  pyproject.toml  requirements.txt  run.ps1  run.sh
.github/workflows/: sync-to-hf.yml
.streamlit/: config.toml
archive/builds/: build3_hitl_tool_router_agent.py  build4_rag_router_agent.py
archive/knowledge_guides/: analysis_workflow.md  rag_chunks.pkl  rag_faiss.index  tool_selection_rules.md
archive/knowledge_tools/: missingness_table.md  multiple_linear_regression.md  pearson_correlation.md  summarize_numeric.md
archive/scripts/: build_rag_index.py  build_tracing_log_pdf.py
builds/: build3_hitl_tool_router_agent.py  build4_rag_router_agent.py
docs/: Assignment5_Validation_Log.md  DEMO_TALKING_POINTS.md  DESIGN_DECISIONS.md  FINAL_REPORT.md  HypothesisLoop_Presentation.pptx  PRESENTATION_OUTLINE.md  Reproduce_Assignment5.md  SPEC.md  langfuse_traces.md  langfuse_tracing_log.md
docs/a5_runs/: p1.out  p2.out  p3.out  p4.out  p5.out  p6.out  p7.out
docs/screenshots/: devtools_values.json
hypothesisloop/: __init__.py  __main__.py  cli.py
hypothesisloop/agent/: factory.py  leakage.py  loop.py  novelty.py  predict_score.py  pruner.py  scheduler.py  state.py
hypothesisloop/llm/: __init__.py  (+3 more)
knowledge/: adult_codebook.md  rag.index  rag_chunks.pkl  test_selection.md
scripts/: aggregate_validation.py  build_assignment5_pdf.py  build_assignment5_pdf_v2.py  build_presentation.py  build_rag_index.py  build_tracing_log_pdf.py  ensure_rag_index.py  make_corrupted_adult.py  run_validation_suite.py  ui_screenshot.py
src/: tools.py
tests/: test_automl_fe_propagation.py  test_baseline.py  test_bias_scanner.py  test_cli.py  test_cost_tracker.py  test_embed.py  test_evaluate.py  test_experiment.py  test_hitl.py  test_hypothesize.py  test_leakage.py  test_loop.py  test_novelty.py  test_phase3_e2e.py  test_phase4_e2e.py  test_phase4_retry_e2e.py  test_phase5_prune_5iter.py  test_phase5_soft_decay.py  test_phase6_e2e.py  test_phase7_e2e.py  test_phase7_report_only.py  test_phase9_predict_e2e.py  test_predict_score.py  test_profile.py  test_pruner.py  test_report.py  test_sandbox.py  test_state.py  test_streamlit_app.py  validation_log.md
(+27 files in other folders)
