[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypothesisloop"
version = "0.1.0"
description = "Autonomous Hypothesize→Experiment→Evaluate→Learn agent over a tabular dataset (QAC387 Wesleyan, Spring 2026)."
requires-python = ">=3.11"
authors = [
    { name = "Holt Young" },
    { name = "Sam Penn" },
]
readme = "README.md"

# Top-level deps only — version ranges, not freeze pins. Transitive deps
# resolve themselves. `pip install -e .` is the single command anyone needs.
dependencies = [
    # Core LLM stack
    "langchain>=0.3,<2.0",
    "langchain-core>=0.3,<2.0",
    "langchain-openai>=0.2,<2.0",
    "openai>=1.40",
    "tiktoken>=0.7",
    # Tracing
    "langfuse>=2.50",
    # RAG
    "faiss-cpu>=1.7",
    # Data + ML primitives
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pypdf>=4.0",
    # AutoML for Predict mode
    "autogluon.tabular>=1.1,<2.0",
    # Templating + validation + env
    "jinja2>=3.1",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    # UI
    "streamlit>=1.39,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
hypothesisloop = "hypothesisloop.cli:main"

[tool.setuptools.packages.find]
include = ["hypothesisloop*"]
exclude = ["archive*", "tests*", "scripts*", "data*", "docs*", "knowledge*", "reports*", "inspirations*"]
